--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "@opentok/client": "^2.16.3",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.0.6",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
