--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@opentok/client": "^2.16.3",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.6",
