--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "@opentok/client": "^2.16.3",
+    "axios": "^0.19.0",
+    "jquery": "^3.4.1",
+    "vue-material": "^1.0.0-beta-11",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "prettier": "^1.18.2"
   }
 }
