--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
     "@opentok/client": "^2.16.3",
     "axios": "^0.19.0",
+    "core-js": "^3.3.2",
+    "eslint": "^6.6.0",
     "jquery": "^3.4.1",
+    "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
@@ -22,6 +23,12 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
