--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@opentok/client": "^2.16.3",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "cors": "^2.8.5",
     "eslint": "^6.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
