--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_URL = "localhost:8080"
+VUE_APP_URL = "http://127.0.0.1:3001"
 VUE_APP_API_KEY_OPENTOK = 46438732
 VUE_APP_SECRET_KEY_OPENTOK = f55b9f3d61b4edb36ac4d7ec2a63c3d22223ee02
