--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13",
     "vue-ctk-date-time-picker": "^2.4.0",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.3",
+    "vuejs-dialog": "^1.4.1",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
